FIMS-33 Add endpoint to retrieve a grant (#45)
